artf542682: Admin UI code review  - Alignment issue

--- a/phresco-service-web/src/main/webapp/admin/theme/photon/css/phresco.css
+++ b/phresco-service-web/src/main/webapp/admin/theme/photon/css/phresco.css
@@ -124,6 +124,7 @@ div.lgnBtnLabel {
 }
 
 .input-xlarge,input.xlarge,textarea.xlarge,select.xlarge {
+	height: auto;
 	width: 291px;
 }
 
@@ -754,7 +755,7 @@ a {
 }
 
 .headerInnerbottom img {
-	bottom: 8px;
+	bottom: -3px;
 	position: relative;
 	text-align: center;
 }
